# third_party_libxml2

./: .gitignore  BUILD.gn  Backport-CVE-2025-6021-tree-Fix-integer-overflow-in-xmlBuildQName-c.patch  Backport-CVE-2025-6170-Fix-potential-buffer-overflow-of-interactive-shell.patch  Fix-CVE-2019-19956.patch  Fix-CVE-2023-25062.patch  Fix-CVE-2023-45322-first.patch  Fix-CVE-2023-45322-pre.patch  Fix-CVE-2023-45322-second.patch  Fix-CVE-2024-34459.patch  Fix-CVE-2024-56171.patch  Fix-CVE-2025-24928.patch  Fix-CVE-2025-27113.patch  Fix-CVE-2025-32414.patch  Fix-CVE-2025-32415.patch  Fix-CVE-2025-49794-CVE-2025-49796-memory-safety-issues-in-xmlSchematronReportOutput.patch  Fix-CVE-2025-49795-null-pointer-dereference-leading-to-DoS.patch  Fix-CVE-2025-8732-Prevent-infinite-recursion-in-xmlCatalogList.patch  Fix-CVE-2026-0989-Add-RelaxNG-include-limit.patch  Fix-CVE-2026-0990-catalog-prevent-inf-recursion-in-xmlCatalogXMLResolveURI.patch  Fix-CVE-2026-0992-catalog-Ignore-repeated-nextCatalog-entries.patch  Fix-CVE-2026-1757-shell-free-cmdline-before-continue.patch  Fix-CVE-2026-6732-Fix-Crash-parser.c.patch  Fix-malloc-fail.patch  Fix-relaxng-is-parsed-to-an-infinite-attrs-next-loop.patch  Fix-type-confusion-in-xmlSchemaCheckAGPropsCorrect.patch  OAT.xml  README.OpenSource  README.en.md  README.md  backport-Add-whitespace-folding-for-some-atomic-data-types-th.patch  backport-Avoid-arithmetic-on-freed-pointers.patch  backport-Avoid-creating-an-out-of-bounds-pointer-by-rewriting.patch  backport-Avoid-double-free-if-malloc-fails-in-inputPush.patch  backport-CVE-2023-28484.patch  backport-CVE-2023-29469.patch  backport-CVE-2023-45322.patch  backport-Correctly-relocate-internal-pointers-after-realloc.patch  backport-Create-stream-with-buffer-in-xmlNewStringInputStream.patch  backport-Don-t-initialize-SAX-handler-in-htmlReadMemory.patch  (+176 more)
include/libxml/: xmlversion.h
